# protobuf_sofa_rpc_demo

./: CMakeLists.txt  Makefile  README.md  client_demo.cpp  server_demo.cpp  service.pb.h
include/: service.pb.cc  service.pb.h  service.proto
mock_test/: mock_test.cpp
src/: client_demo.cpp  http_client_demo.cpp  server_demo.cpp
